tests/baselines/reference/generatorTypeCheck63.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck63.ts(24,61): error TS2345: Argument of type '(state: State) => Generator<number, State, unknown>' is not assignable to parameter of type '(a: State) => IterableIterator<State>'.
  Type 'Generator<number, State, unknown>' is not assignable to type 'IterableIterator<State>'.
    Types of property 'next' are incompatible.
      Type '(value?: unknown) => IteratorResult<number, State>' is not assignable to type '(value?: any) => IteratorResult<State, void | State>'.
        Type 'IteratorResult<number, State>' is not assignable to type 'IteratorResult<State, void | State>'.
          Type 'IteratorYieldResult<number>' is not assignable to type 'IteratorResult<State, void | State>'.
            Type 'IteratorYieldResult<number>' is not assignable to type 'IteratorYieldResult<State>'.
              Type 'number' is not assignable to type 'State'.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck63.ts(32,62): error TS2345: Argument of type '(state: State) => Generator<never, number, unknown>' is not assignable to parameter of type '(a: State) => IterableIterator<State>'.
  Type 'Generator<never, number, unknown>' is not assignable to type 'IterableIterator<State>'.
    Types of property 'next' are incompatible.
      Type '(value?: unknown) => IteratorResult<never, number>' is not assignable to type '(value?: any) => IteratorResult<State, void | State>'.
        Type 'IteratorResult<never, number>' is not assignable to type 'IteratorResult<State, void | State>'.
          Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorResult<State, void | State>'.
            Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorReturnResult<void | State>'.
              Type 'number' is not assignable to type 'void | State'.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck63.ts(36,62): error TS2345: Argument of type '(state: State) => Generator<State, number, unknown>' is not assignable to parameter of type '(a: State) => IterableIterator<State>'.
  Type 'Generator<State, number, unknown>' is not assignable to type 'IterableIterator<State>'.
    Types of property 'next' are incompatible.
      Type '(value?: unknown) => IteratorResult<State, number>' is not assignable to type '(value?: any) => IteratorResult<State, void | State>'.
        Type 'IteratorResult<State, number>' is not assignable to type 'IteratorResult<State, void | State>'.
          Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorResult<State, void | State>'.
            Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorReturnResult<void | State>'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck63.ts (3 errors) ====
    export interface StrategicState {
        lastStrategyApplied?: string;
    }
    
    export function strategy<T extends StrategicState>(stratName: string, gen: (a: T) => IterableIterator<T | undefined>): (a: T) => IterableIterator<T | undefined> {
        return function*(state) {
            for (const next of gen(state)) {
                if (next) {
                    next.lastStrategyApplied = stratName;
                }
                yield next;
            }
        }
    }
    
    export interface Strategy<T> {
        (a: T): IterableIterator<T | undefined>;
    }
    
    export interface State extends StrategicState {
        foo: number;
    }
    
    export const Nothing: Strategy<State> = strategy("Nothing", function* (state: State) {
                                                                ~~~~~~~~
!!! error TS2345: Argument of type '(state: State) => Generator<number, State, unknown>' is not assignable to parameter of type '(a: State) => IterableIterator<State>'.
!!! error TS2345:   Type 'Generator<number, State, unknown>' is not assignable to type 'IterableIterator<State>'.
!!! error TS2345:     Types of property 'next' are incompatible.
!!! error TS2345:       Type '(value?: unknown) => IteratorResult<number, State>' is not assignable to type '(value?: any) => IteratorResult<State, void | State>'.
!!! error TS2345:         Type 'IteratorResult<number, State>' is not assignable to type 'IteratorResult<State, void | State>'.
!!! error TS2345:           Type 'IteratorYieldResult<number>' is not assignable to type 'IteratorResult<State, void | State>'.
!!! error TS2345:             Type 'IteratorYieldResult<number>' is not assignable to type 'IteratorYieldResult<State>'.
!!! error TS2345:               Type 'number' is not assignable to type 'State'.
        yield 1;
        return state;
    });
    
    export const Nothing1: Strategy<State> = strategy("Nothing", function* (state: State) {
    });
    
    export const Nothing2: Strategy<State> = strategy("Nothing", function* (state: State) {
                                                                 ~~~~~~~~
!!! error TS2345: Argument of type '(state: State) => Generator<never, number, unknown>' is not assignable to parameter of type '(a: State) => IterableIterator<State>'.
!!! error TS2345:   Type 'Generator<never, number, unknown>' is not assignable to type 'IterableIterator<State>'.
!!! error TS2345:     Types of property 'next' are incompatible.
!!! error TS2345:       Type '(value?: unknown) => IteratorResult<never, number>' is not assignable to type '(value?: any) => IteratorResult<State, void | State>'.
!!! error TS2345:         Type 'IteratorResult<never, number>' is not assignable to type 'IteratorResult<State, void | State>'.
!!! error TS2345:           Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorResult<State, void | State>'.
!!! error TS2345:             Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorReturnResult<void | State>'.
!!! error TS2345:               Type 'number' is not assignable to type 'void | State'.
        return 1;
    });
    
    export const Nothing3: Strategy<State> = strategy("Nothing", function* (state: State) {
                                                                 ~~~~~~~~
!!! error TS2345: Argument of type '(state: State) => Generator<State, number, unknown>' is not assignable to parameter of type '(a: State) => IterableIterator<State>'.
!!! error TS2345:   Type 'Generator<State, number, unknown>' is not assignable to type 'IterableIterator<State>'.
!!! error TS2345:     Types of property 'next' are incompatible.
!!! error TS2345:       Type '(value?: unknown) => IteratorResult<State, number>' is not assignable to type '(value?: any) => IteratorResult<State, void | State>'.
!!! error TS2345:         Type 'IteratorResult<State, number>' is not assignable to type 'IteratorResult<State, void | State>'.
!!! error TS2345:           Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorResult<State, void | State>'.
!!! error TS2345:             Type 'IteratorReturnResult<number>' is not assignable to type 'IteratorReturnResult<void | State>'.
        yield state;
        return 1;
    });